[gd_scene load_steps=12 format=3 uid="uid://b7myeccr8o0wl"]

[ext_resource type="Script" path="res://enemies/enemy.gd" id="1_kgqa5"]
[ext_resource type="Texture2D" uid="uid://gvebf6mil3xx" path="res://textures/enemies/kolbold_weak.png" id="2_xuo1r"]
[ext_resource type="PackedScene" uid="uid://ddr7gbitfrvil" path="res://utils/hurt_box.tscn" id="3_b1cnn"]
[ext_resource type="PackedScene" uid="uid://bo6us8533c0ra" path="res://utils/hit_box.tscn" id="4_6qclf"]
[ext_resource type="AudioStream" uid="uid://dtlqmr1vslg8u" path="res://audio/sfx/enemy_hit.ogg" id="5_86x74"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jwsnc"]
radius = 6.0
height = 20.0

[sub_resource type="AtlasTexture" id="AtlasTexture_tia54"]
atlas = ExtResource("2_xuo1r")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyxpp"]
atlas = ExtResource("2_xuo1r")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jf6w6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tia54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyxpp")
}],
"loop": true,
"name": &"walk",
"speed": 2.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a0pqq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ik4ot"]
radius = 7.0
height = 24.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
motion_mode = 1
script = ExtResource("1_kgqa5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
shape = SubResource("CapsuleShape2D_jwsnc")

[node name="CharacterSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_jf6w6")
animation = &"walk"

[node name="HurtBox" parent="." instance=ExtResource("3_b1cnn")]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("CapsuleShape2D_a0pqq")

[node name="HitBox" parent="." instance=ExtResource("4_6qclf")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource("CapsuleShape2D_ik4ot")

[node name="AudioHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_86x74")
volume_db = -15.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.500001, 0.333351)
scale = Vector2(1.45, 1.56667)

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]

[editable path="HurtBox"]
[editable path="HitBox"]
